<?xml version="1.0"?>
<resources>
    <string name="app_name">Chat_04</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_full_name">Full name</string>
    <string name="sign_up_birthday">Birthday</string>
    <string name="sign_up_email">Example@gmail.com</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirm_password">Confirm password</string>
    <string name="sign_up_gender">Gender</string>
    <string name="sign_up_male">Male</string>
    <string name="sign_up_female">Female</string>
    <string name="sign_up_search">Search</string>
    <string name="sign_up_address">Address</string>
    <string name="sign_up_age">Age: 24</string>
    <string name="sign_up_success">Đăng ký thành công</string>
    <string name="sign_up_existed">Tài khoản đã tồn tại</string>
    <string name="sign_up_empty_user_name">Tên không được rỗng</string>
    <string name="sign_up_error_empty_birth_day">Ngày sinh không được rỗng</string>
    <string name="sign_up_empty_gender">Giới tính không được rỗng</string>
    <string name="sign_up_empty_email">Email không được rỗng</string>
    <string name="sign_up_empty_password">Mật khẩu không được rỗng</string>
    <string name="sign_up_length_password_invalid">Mật khẩu phải trên 6 ký tự</string>
    <string name="sign_up_cofirm_password_invalid">Mật khẩu không khớp</string>
    <string name="sign_up_error_sign_up">Có lỗi xảy ra. Vui lòng đăng ký lại!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="logo_app">EZCHAT</string>
    <string name="welcome">Welcome to EzChat</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="login_with_face">Login with Facebook</string>
    <string name="link_sign_up">Sign Up for EzChat</string>
    <string name="login_successfully">Login Successfully</string>

    <string name="facebook_app_id">2402662173078831</string>
    <string name="fb_login_protocol_scheme">fb2402662173078831</string>

    <string name="login_failed">The password you entered is incorrect. Please try again.</string>
    <string name="login_failed_title">Incorrect Password</string>
    <string name="login_failed_ok">OK</string>
    <string name="bad_email">The email address is badly formatted.</string>
    <string name="user_not_found">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="other_error">unknown error</string>
    <string name="choose_image">Choose Image</string>
    <string name="discovery_search">Tìm kiếm bạn bè</string>
    <string name="discovery_title_suggest">Tìm bạn: </string>
    <string name="requireGPS">Turn on GPS and Internet</string>
    <string name="search_message">Search</string>
    <string name="profile_background">Background</string>
    <string name="profile_back">Quay lại</string>
    <string name="profile_add_friend">Kết bạn</string>
    <string name="profile_added_friend">Đã gửi kết bạn</string>
    <string name="no_internet">Kiểm tra lại kết nối</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="title_modify_info_user">Thay đổi thông tin</string>
    <string name="title_info_user">Thông tin cá nhân</string>
    <string name="done">Lưu</string>
    <string name="edit_profile_success">Cập nhật thông tin thành công</string>
    <string name="edit_profile_fail">Có lỗi xảy ra, vui lòng thử lại</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="sign_out_notify">Bạn có chắc chắn muốn thoát không?</string>
    <string name="select_image">Chọn ảnh</string>
    <string name="update_avatar_success">Đã cập nhật ảnh đại diện</string>
    <string name="update_cover_success">Đã cập nhật ảnh bìa</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bio">Giới thiệu</string>
    <string name="cancel">Quay lại</string>
    <string name="invite_more_friends">Kết bạn</string>
    <string name="button_chat">Nhắn tin</string>
    <string name="cancel_invite_more_friends">Hủy</string>
    <string name="friend_request">Friend Request</string>
    <string name="accept_request">Accept</string>
    <string name="cancel_request">Cancel</string>
    <string name="result_search">Kết quả tìm thấy</string>
    <string name="tap">Tap</string>
    <string name="find_people">to find people.</string>
    <string name="get_started">Get started</string>
    <string name="notice">Don\'t waste your time. \n Let\'s say hello</string>
    <string name="newFriend">NEW</string>
    <string name="notice_friend">You are now friends with</string>
    <string name="notice_connect">You are now connected on EzChat</string>
    <string name="dialog_all_gender">All</string>
    <string name="dialog_age">Độ tuổi</string>
    <string name="dialog_age_separate"> - </string>
    <string name="dialog_distance">Khoảng cách</string>
    <string name="dialog_from_distance">0m</string>
    <string name="dialog_to_distance">10km</string>
    <string name="dialog_apply">Áp dụng</string>
    <string name="dialog_unit_distance">km</string>
    <string name="dialog_title">Tìm kiếm nâng cao</string>
    <string name="lable_user_images">Ảnh</string>
    <string name="friend">Friends</string>
    <string name="empty_request">No new requests</string>
    <string name="vertical_dots">&#8942;</string>
    <string name="delete">delete</string>
    <string name="unfriend">You unfriended </string>
    <string name="successfully">successfully</string>
</resources>
