<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context="com.sun.chat_04.ui.signup.SignUpActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_hz1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_hz2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/SignUpToolBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/sign_up_title" />

    <EditText
        android:id="@+id/edit_fullname"
        style="@style/SignUpField"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:hint="@string/sign_up_full_name"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_hz1" />

    <TextView
        android:id="@+id/text_birthday"
        style="@style/SignUpField"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_8"
        android:hint="@string/sign_up_birthday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_fullname" />

    <TextView
        android:id="@+id/text_gender"
        style="@style/SignUpGender"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center_vertical"
        android:text="@string/sign_up_gender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_birthday" />

    <RadioGroup
        android:id="@+id/radio_groups"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_48"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center_vertical|center"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintLeft_toRightOf="@+id/text_gender"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_birthday">

        <RadioButton
            android:id="@+id/radio_male"
            style="@style/Common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up_male" />

        <RadioButton
            android:id="@+id/radio_female"
            style="@style/Common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up_female" />
    </RadioGroup>

    <EditText
        android:id="@+id/edit_email"
        style="@style/SignUpField"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_8"
        android:hint="@string/sign_up_email"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_gender" />

    <EditText
        android:id="@+id/edit_password"
        style="@style/SignUpField"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_8"
        android:hint="@string/sign_up_password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />

    <EditText
        android:id="@+id/edit_confirm_password"
        style="@style/SignUpField"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_8"
        android:autofillHints="@string/sign_up_confirm_password"
        android:hint="@string/sign_up_confirm_password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password" />

    <Button
        android:id="@+id/button_signUp"
        style="@style/ButtonSignUpStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_56"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:text="@string/sign_up_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_hz2" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
