<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondBlue"
    android:padding="@dimen/dp_16">


    <EditText
        android:id="@+id/editEmailLogin"
        style="@style/EmailPassLoginStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editPassLogin"
        style="@style/EmailPassLoginStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_8"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editEmailLogin"
        tools:ignore="RtlSymmetry" />

    <FrameLayout
        android:id="@+id/frameButtonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPassLogin">

        <Button
            android:id="@+id/buttonLoginEmailPass"
            style="@style/ButtonBeforeLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:clickable="false"
            android:text="@string/login" />

        <ProgressBar
            android:id="@+id/progressbarSignIn"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminateTint="@color/colorBlue"
            android:indeterminateTintMode="src_in"
            android:translationZ="@dimen/dp_2"
            android:visibility="invisible" />
    </FrameLayout>


    <TextView
        android:id="@+id/textOr"
        style="@style/CommonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:gravity="center"
        android:text="@string/or"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameButtonLogin" />

    <Button
        android:id="@+id/buttonLoginFace"
        style="@style/ButtonLoginFace"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_56"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/login_with_face"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textOr" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/buttonLoginFb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textOr" />

    <TextView
        android:id="@+id/textSignUp"
        style="@style/LinkSignUpStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/link_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLoginFace" />

    <TextView
        android:id="@+id/textLogoApp"
        style="@style/LogoAppStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/logo_app"
        app:layout_constraintBottom_toTopOf="@+id/textWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        app:layout_constraintBottom_toTopOf="@+id/editEmailLogin"
        app:layout_constraintStart_toStartOf="@+id/textLogoApp"
        app:layout_constraintTop_toBottomOf="@+id/textLogoApp" />


</android.support.constraint.ConstraintLayout>
