<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefreshUserProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/profile_background"
            app:layout_constraintBottom_toTopOf="@+id/gl1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageAvatarProfile"
            android:layout_width="@dimen/dp_150"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/gl3"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl2" />

        <TextView
            android:id="@+id/textNameProfile"
            style="@style/ProfileFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:hint="@string/sign_up_full_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl3" />

        <ImageView
            android:id="@+id/imageLocationProfile"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toBottomOf="@+id/textAddressProfile"
            app:layout_constraintEnd_toStartOf="@+id/textAddressProfile"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textAddressProfile" />

        <TextView
            android:id="@+id/textAddressProfile"
            style="@style/Common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:hint="@string/sign_up_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageLocationProfile"
            app:layout_constraintTop_toBottomOf="@id/textNameProfile" />

        <TextView
            android:id="@+id/textGenderProfile"
            style="@style/Common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:hint="@string/sign_up_gender"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textAddressProfile" />

        <TextView
            android:id="@+id/textAgeProfile"
            style="@style/Common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:hint="@string/sign_up_age"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textGenderProfile" />

        <TextView
            android:id="@+id/textUserBioProfile"
            style="@style/Common"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginRight="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textAgeProfile" />

        <include
            android:id="@+id/toolbarProfile"
            layout="@layout/toolbar_profile" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_margin="@dimen/dp_16"
            android:background="@color/color_blue"
            android:text="@string/profile_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonAddFriend"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonAddFriend"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_margin="@dimen/dp_16"
            android:background="@color/color_red"
            android:text="@string/profile_add_friend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonBack"
            app:layout_goneMarginLeft="@dimen/dp_16" />

        <android.support.constraint.Guideline
            android:id="@+id/gl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <android.support.constraint.Guideline
            android:id="@+id/gl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <android.support.constraint.Guideline
            android:id="@+id/gl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
